--- a/services/items/package.json
+++ b/services/items/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^9.0.1",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
