--- a/services/orders/package.json
+++ b/services/orders/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
